# task2.4

./: CMakeLists.txt  README.txt  task.txt
app/: CMakeLists.txt
app/src/: main.c
lib/: CMakeLists.txt
lib/include/: lib_main.h
lib/src/: lib_main.c
